--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ idna==3.4
 Markdown==3.4.1
 oauthlib==3.2.2
 Pillow==9.4.0
+psycopg2-binary==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
 python3-openid==3.2.0
