--- a/.dockerignore
+++ b/.dockerignore
@@ -127,6 +127,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.venv/
 
 # Spyder project settings
 .spyderproject
@@ -162,5 +163,6 @@ cython_debug/
 run.bat
 *.code-workspace
 
+migrations/
 
 .hoolicode/
