Modified Docker support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     container_name: Server
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./docker/development/server/Dockerfile
     ports:
       - 8000:8000
     depends_on:
