--- a/env/env.dev.sh.template
+++ b/env/env.dev.sh.template
@@ -1,5 +1,15 @@
 #! /bin/bash
 
+export SITE_ID='DEFAULT: 1'
+
+
+# Postgres
+export POSTGRES_DB='DEFAULT: django'
+export POSTGRES_HOST='DEFAULT: database'
+export POSTGRES_USER='DEFAULT: django'
+export POSTGRES_PASSWORD='DEFAULT: django'
+export POSTGRES_PORT='5432'
+
 # Captcha
 export RECAPTCHA_PUBLIC_KEY='REQUIRED: Captcha public key'
 export RECAPTCHA_PRIVATE_KEY='REQUIRED: Captcha private key'
