--- a/docker/development/server/Dockerfile
+++ b/docker/development/server/Dockerfile
@@ -12,23 +12,18 @@ RUN apt-get update \
 RUN curl https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -o /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
+ENV DockerHOME=/home/app/webapp
+RUN mkdir -p $DockerHOME
+WORKDIR $DockerHOME
+
+RUN pip install --upgrade pip
+COPY ./requirements/requirements.dev.txt /requirements.dev.txt 
+RUN pip install -r /requirements.dev.txt
+
 COPY ./docker/development/server/entrypoint.sh /
 COPY ./docker/development/server/start.sh /
 RUN chmod +x /entrypoint.sh
 RUN chmod +x /start.sh
 
-ENV DockerHOME=/home/app/webapp
-
-RUN mkdir -p $DockerHOME  
-
-WORKDIR $DockerHOME
-
-RUN pip install --upgrade pip
-
-COPY ./requirements/requirements.dev.txt /requirements.txt 
-
-RUN pip install -r /requirements.txt
-
 COPY ./server $DockerHOME
-
 ENTRYPOINT ["/entrypoint.sh"]
