--- a/env/env.dev.sh.template
+++ b/env/env.dev.sh.template
@@ -2,13 +2,12 @@
 
 export SITE_ID='DEFAULT: 1'
 
-
 # Postgres
 export POSTGRES_DB='DEFAULT: django'
 export POSTGRES_HOST='DEFAULT: database'
 export POSTGRES_USER='DEFAULT: django'
 export POSTGRES_PASSWORD='DEFAULT: django'
-export POSTGRES_PORT='5432'
+export POSTGRES_PORT='DEFAULT: 5432'
 
 # Captcha
 export RECAPTCHA_PUBLIC_KEY='REQUIRED: Captcha public key'
