--- a/requirements/requirements.dev.txt
+++ b/requirements/requirements.dev.txt
@@ -1,8 +1,10 @@
+asgiref==3.6.0
+bleach==6.0.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
-cryptography==39.0.0
 coverage==7.1.0
+cryptography==39.0.0
 defusedxml==0.7.1
 Django==4.1.6
 django-allauth==0.52.0
@@ -26,3 +28,11 @@ pyflakes==3.0.1
 PyJWT==2.6.0
 python3-openid==3.2.0
 pytz==2022.7.1
+requests==2.28.2
+requests-oauthlib==1.3.1
+six==1.16.0
+sqlparse==0.4.3
+typing_extensions==4.4.0
+tzdata==2022.7
+urllib3==1.26.14
+webencodings==0.5.1
