Added CORS support

--- a/env/env.dev.sh.template
+++ b/env/env.dev.sh.template
@@ -1,6 +1,8 @@
 #! /bin/bash
 
+# Django
 export SITE_ID='DEFAULT: 1'
+export HOST='OPTIONAL: website hosting, e.g. example.com'
 
 # Postgres
 export POSTGRES_DB='DEFAULT: django'
