--- a/requirements/requirements.dev.txt
+++ b/requirements/requirements.dev.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 Django==4.1.6
 django-allauth==0.52.0
 django-autoslug==1.9.8
+django-cors-headers==3.13.0
 django-ipware==4.0.2
 django-modeltranslation==0.18.9
 django-recaptcha==3.0.0
