--- a/requirements/requirements.dev.txt
+++ b/requirements/requirements.dev.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+autopep8==2.0.1
 bleach==6.0.0
 certifi==2022.12.7
 cffi==1.15.1
@@ -33,6 +34,7 @@ requests==2.28.2
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.3
+tomli==2.0.1
 typing_extensions==4.4.0
 tzdata==2022.7
 urllib3==1.26.14
